--- a/07_lesson_starter/css/style.css
+++ b/07_lesson_starter/css/style.css
@@ -5,3 +5,21 @@ body {
     font-size: 2rem;
     font-family: 'Roboto', sans-serif;
 }
+a {
+    text-decoration: none;
+    cursor: pointer;
+    color: blue;
+}
+
+a:visited {
+    color: purple;
+
+}
+
+a:hover {
+    color: green;
+}
+
+a:active {
+    color: red;
+}
