--- a/08_lesson_starter/css/style.css
+++ b/08_lesson_starter/css/style.css
@@ -5,3 +5,32 @@ body {
   font-size: 2rem;
   font-family: "Roboto", sans-serif;
 }
+
+ol {
+  list-style-type: lower-alpha;
+  padding: 0;
+
+}
+
+ul {
+  list-style-type: square;
+  text-align: center;
+  list-style-position: inside;
+  color: blue;
+  line-height: 1.6;
+/*   list-style-image: url("../images/checkmark.png");
+  list-style: square url("../images/checkmark.png")inside; */
+  
+}
+
+ul li:nth-child(even) {
+  color: red;
+}
+
+ul ::marker {
+  color: #000;
+  font-family: fantasy;
+  font-size: 1em;
+  content: "only 6$>> ";
+
+}
