--- a/10_lesson_starter/css/style.css
+++ b/10_lesson_starter/css/style.css
@@ -4,4 +4,30 @@ body {
   font-size: 2rem;
   font-family: "Roboto", sans-serif;
 }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+ul {
+  list-style-type: none;
+  padding: 0.5rem;
+  text-align: right;
+  background-color: #333;
+  margin: 0;
 
+}
+
+li {
+  display: inline-block;
+  margin-inline: 0.5rem;
+}
+
+li a {
+  color: #fff;
+  text-decoration: none;
+}
+
+li a:hover, li a:focus {
+  text-decoration: underline;
+}
