--- a/13_lesson_starter/css/style.css
+++ b/13_lesson_starter/css/style.css
@@ -17,6 +17,7 @@ body {
   width: 75vw;
   height: 85vh;
   margin: 40px auto;
+   
 }
 
 .inner-container {
@@ -24,6 +25,7 @@ body {
   width: 40vw;
   height: 50vh;
   margin: 200px auto;
+  
 }
 
 .box {
@@ -31,4 +33,32 @@ body {
   height: 150px;
   color: #fff;
   padding: 1rem;
+}
+
+.absolute {
+  background-color: #00f;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+
+}
+
+.relative {
+  background-color: red;
+  position: relative;
+  top: 100px;
+  left: 100px;
+}
+
+.fixed {
+  background-color: green;
+  position: fixed;
+  top: 100px;
+}
+
+.sticky {
+  background-color: #000;
+  position: sticky;
+  top: 0;
 }
