--- a/13_lesson_starter/css/style.css
+++ b/13_lesson_starter/css/style.css
@@ -62,3 +62,56 @@ body {
   position: sticky;
   top: 0;
 }
+
+section {
+  height: 100vw;
+
+}
+
+.blue {
+  background-color: #00f;
+}
+.red {
+  background-color: red;
+}
+.green {
+  background-color: green
+}
+
+header, footer {
+  color: #fff;
+  text-align: center;
+  height: 100px;
+  
+}
+
+header {
+  position: sticky;
+  top: 0;
+  font-size: 5rem;
+}
+
+footer {
+  background-color: #000;
+  position: sticky;
+  bottom: 0;
+  font-size: 3rem;
+}
+
+a:visited {
+  color: #fff;
+}
+
+.social {
+  background-color: royalblue;
+  color: #fff;
+  font-size: inherit;
+  padding: 1rem;
+  position: fixed;
+  top: 30%;
+  left: 0;
+  z-index: 1;
+}
+html {
+  scroll-behavior: smooth;
+}
