--- a/14_lesson_starter/css/style.css
+++ b/14_lesson_starter/css/style.css
@@ -17,13 +17,34 @@ body {
   min-height: 400px;
   margin-inline: auto;
   border: 1px solid #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+  align-content: space-evenly;
+  
+  gap: 1rem;
+  
 } 
 
 .box {
-  min-width: 100px;
-  min-height: 100px;
+  /* min-width: 100px; */
+ height: 100px;
   background-color: #000;
   color: #fff;
   font-size: 2rem;
   padding: 0.5rem;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  
+  flex-shrink: 1 1 40%;
+}
+
+.box:nth-child(2){
+
+  flex: 2 2 150px;
+  order: 0;
 }
