--- a/16_lesson_starter/css/style.css
+++ b/16_lesson_starter/css/style.css
@@ -5,13 +5,95 @@
   padding: 0;
   box-sizing: border-box;
 }
+img {
+  display: block;
+}
 
-body {
-  font-family: "Nunito", sans-serif;
-  min-height: 100vh;
+.nowrap {
+  white-space: nowrap;
+}
+.offscreen {
+  position: absolute;
+  left: -10000px;
+
 }
 
 
+.profile-pic-figure {
+  width: 35%;
+}
+
+.hero {
+  border-bottom: 2px solid black;
+  padding: 20px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 30px;
+  
+ 
+}
+.container {
+  background-color:hsla(0, 0%, 100%, 0.397);
+  background-color: rgb(251, 210, 156);
+  background-image: url("../img/map-2176x1451.png");
+  background-repeat: repeat;
+  background-position: top;
+  background-size: cover;
+}
+.h1 {
+  font-size: 500%;
+  color: aliceblue;
+  text-shadow: 2px 2px 5px #000;
+ /*  background-color:hsla(0, 0%, 0%, 0.397);
+
+  padding: 0.25rem;
+  border-radius: 10px; */
+
+}
+
+.profile-pic-figure img {
+  width: 100%;
+  height: auto;
+  min-width: 100px;
+  border: 5px double gray;
+  border-radius: 50%;
+}
+body {
+  font-family: "Nunito", sans-serif;
+  min-height: 100vh;
+  background-color: aliceblue;
+  /* background-image:url("../img/bubbles.png"), 
+                            linear-gradient(to left,steelblue, #fff);
+  background-repeat: repeat-y, no-repeat;
+  background-position: right center; */
+  
+  background: repeat-y right center url("../img/bubbles.png"), no-repeat linear-gradient(to left, steelblue, #fff);
+  background-size: 20%, auto;
+}
+
+.example {
+  margin-top: 1rem;
+  padding-left: 20px;
+  border: 1px solid red;
+}
+
+.example img {
+  width: 25%;
+  height: auto;
+}
+
+.clip {
+  font-weight: 800;
+  font-size: 18rem;
+  text-align: center;
+  background-image: url("../img/scenic-2200x1331.png");
+  background-size: 100%;
+  text-transform: uppercase;
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+}
 
 
 
