--- a/19_lesson_starter/css/style.css
+++ b/19_lesson_starter/css/style.css
@@ -32,8 +32,7 @@ body {
   flex-direction: column;
 }
 
-header,
-footer {
+header, footer {
   position: sticky;
   background-color: #1e293b;
   color: whitesmoke;
@@ -42,6 +41,7 @@ footer {
 
 header {
   top: 0;
+  
 }
 
 nav {
@@ -53,14 +53,16 @@ nav {
   justify-content: space-evenly;
 }
 
-nav a,
-nav a:visited {
+nav a:any-link {
   color: #000;
 }
 
-nav a:hover,
-nav a:focus {
+nav :is(a:hover, a:focus) {
   color: hsla(0, 0%, 20%, 0.6);
+}
+
+nav a:active{
+  color: red;
 }
 
 main {
@@ -88,7 +90,9 @@ footer {
   flex-direction: column;
   align-items: center;
 }
-
+.card:target {
+  border: 2px solid rebeccapurple;
+}
 .card figure {
   display: flex;
   flex-flow: column nowrap;
@@ -98,12 +102,41 @@ footer {
   border: 5px double #333;
   border-radius: 50%;
 }
-
+.card img:not([alt]){
+  border: 10px solid red;
+}
+.card:nth-child(even) {
+  background-color: papayawhip;
+}
 .card figcaption {
   font-weight: bolder;
   font-size: 2rem;
   margin: 1rem;
   text-align: center;
+}
+.card figcaption::after {
+  content: " hello";
+}
+.card p {
+  position: relative;
+}
+.card p::before {
+  content: open-quote;
+  font-size: 3em;
+  position: absolute;
+  top: -0.25em;
+  left: -0.5em;
+}
+.card p::after {
+  content: close-quote;
+  font-size: 3em;
+  position: absolute;
+  top: -0.25em;
+  right: -0.5em;
+}
+
+.card figcaption::first-line {
+  font-size: 3rem;
 }
 
 /* || SMALL */
