--- a/21_lesson_starter/css/style.css
+++ b/21_lesson_starter/css/style.css
@@ -11,7 +11,8 @@
 :root {
   /* FONT */
   --FF: "Nunito", sans-serif;
-  --FS: 1.5rem;
+  --FS: clamp(1.75rem, 3vh, 2.2rem);
+  --FS-SM: clamp(1.25rem, 3vh, 1.5rem);
   --FS-XL: 3rem;
 
   /* COLOR */
@@ -81,15 +82,55 @@ nav {
 
 main {
   flex-grow: 1;
-
-  padding: 10px 0;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-flow: row wrap;
-  gap: min(4vw, 15px);
+  padding: var(--PADDING);
+  display: grid;
+  grid-template-columns: repeat(4, minmax(100px, 300px));
+  gap: min(2vw, 20px);
+  /* display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-start; */
 }
 
+main section {
+  flex-grow: 1;
+  padding: var(--PADDING);
+}
+main aside {
+  background-color: hsla(0, 0, 20%, 0.8);
+  color: var(--LIGHT-COLOR);
+  font-size: var(--FS-SM);
+  font-style: italic;
+  padding: var(--PADDING);
+
+}
+.content {
+  margin-top: 20px;
+}
+
+.tooltip {
+  border-bottom: 1px dashed orange;
+  position: relative;
+
+}
+
+.tooltip:hover::before{
+  content: attr(data-tooltip);
+  position: absolute;
+  top: -20px;
+  white-space: nowrap;
+  background-color: var(--DARK-COLOR);
+  padding: var(--PADDING);
+  border-radius: 14px;
+}
+
+a:any-link {
+  color: firebrick;
+
+}
+
+a:hover, a:focus {
+  filter: brightness(150%)
+}
 footer {
   bottom: 0;
 }
@@ -102,12 +143,26 @@ footer {
 
 .square {
   background-color: var(--SQUARE-BGCOLOR);
-  width: var(--SQUARE-SIZE);
-  height: var(--SQUARE-SIZE);
+  /* width: var(--SQUARE-SIZE);
+  height: var(--SQUARE-SIZE); */
   border: var(--BORDERS);
   border-radius: 15px;
   display: grid;
   place-content: center;
   font-size: var(--FS-XL);
   box-shadow: var(--SHADOWS);
+}
+
+@media screen and(min-width: 576px){
+  main {
+    flex-flow: row nowrap;
+    justify-content: space-between;
+  }
+  main section {
+    width: calc(70% - 5px)
+  }
+
+  main aside {
+    width: calc(30% - 5px);
+  }
 }
