--- a/22_lesson_starter/css/style.css
+++ b/22_lesson_starter/css/style.css
@@ -29,7 +29,73 @@ main {
 div {
   width: 200px;
   height: 200px;
+  margin: 20px;
   border: 1px solid #000;
   display: grid;
   place-content: center;
+}
+
+div:first-child {
+  background-color: dodgerblue;
+  /* transform: translateX(-50%); */
+  /* transform: rotateX(45deg); */
+  /* transform: scaleX(120%); */
+  /* transform: skewX(-10deg) */;
+}
+
+div:nth-child(2) {
+  background-color: yellow;
+  /* transform: translateY(-2rem); */
+  /* transform: rotateY(180deg); */
+  /* transform: scaleY(120%); */
+  /* transform: skewY(10deg); */
+}
+
+div:last-child {
+  background-color: limegreen;
+  /* transform: translate(100%, -5rem); */
+  /* transform: rotateZ(78deg); */
+  /* transform: scale(50%, 50%); */
+  /* transform: skew(-10deg, 10deg); */
+}
+
+div:hover {
+  background-color: midnightblue;
+ /*  transition-property: background-color, transform;
+  transition-duration: 2s, 3s;
+  transition-delay: 0.5s; 
+  transition-timing-function: linear;*/
+  transition: all 2s ease-in-out 0.5s;
+
+}
+
+div:last-child:hover {
+  transform: rotate(360deg);
+}
+
+.animate {
+ /*  animation-name: slide;
+  animation-duration: 5s;
+  animation-timing-function: ease-in-out;
+  animation-delay: 1s;
+  animation-iteration-count: 5;
+  animation-direction: normal;
+  animation-fill-mode: forwards; */
+
+  animation: 5s ease-in-out 1s 2 normal forwards slide;
+}
+@keyframes slide {
+  0% {
+    transform: translateX(0);
+  }
+  33% {
+    transform: translateX(300px) rotate(180deg);
+  }
+  66% {
+    transform: translateX(-300px) rotate(-180deg);
+  }
+  100% {
+    transform: translateX(0);
+    background-color: rebeccapurple;
+  }
 }
