--- a/23_lesson_starter/css/style.css
+++ b/23_lesson_starter/css/style.css
@@ -18,6 +18,8 @@ button {
   /* COLORS */
   --HEADER-BGCOLOR: #333;
   --HEADER-COLOR: whitesmoke;
+  --BGCOLOR: whitesmoke;
+  --COLOR: #000;
 }
 
 /* || UTILITY CLASSES */
@@ -37,13 +39,23 @@ body {
   min-height: 100vh;
   display: flex;
   flex-flow: column nowrap;
+  
 }
 
 /* || BLOCKS */
 /* aka components */
-
+.header {
+  background-color: var(--BGCOLOR);
+  color: var(--HEADER-COLOR);
+  padding: 1rem 1rem 0.5rem;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+}
 .btn {
   min-width: 100px;
   min-height: 100px;
   border-radius: 15px;
 }
+
+
